Opened 8 years ago

Closed 8 years ago

#13261 closed bug (fixed)

Debugger crashes when sorting threads by "stop reason"

Reported by: pulkomandy Owned by: anevilyak
Priority: normal Milestone: Unscheduled
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Title says it all. Crash in strcasecmp() called from StringTableColumn::CompareValues(BVariant&) while sorting the list.

Change History (1)

comment:1 by anevilyak, 8 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50913.

Note: See TracTickets for help on using tickets.