Debugger: Fix #13261.

ThreadsTableModel:
- When returning field values for the stop reason column, only return valid if
  we actually populated it with a value (ergo, the thread was actually
  stopped). Otherwise, the table will attempt to perform comparisons on a
  BVariant which was never actually populated, leading to crashes.